--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <modules>
         <module>gradoop-core</module>
         <module>gradoop-giraph</module>
-        <module>gradoop-biiig</module>
+        <module>gradoop-examples</module>
         <module>gradoop-checkstyle</module>
         <module>gradoop-mapreduce</module>
     </modules>
