WIP analysing connected components imported from RDF

--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -115,5 +115,14 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-tdb</artifactId>
+        </dependency>
     </dependencies>
 </project>
