--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,8 @@
         <dep.junit.version>4.11</dep.junit.version>
         <dep.jsonassert.version>1.2.3</dep.jsonassert.version>
         <dep.log4j.version>1.2.17</dep.log4j.version>
+        <dep.jena-core.version>2.11.0</dep.jena-core.version>
+        <dep.jena-tdb.version>1.0.0</dep.jena-tdb.version>
 
 
         <plugin.maven-compiler.version>3.0</plugin.maven-compiler.version>
@@ -208,6 +210,16 @@
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>${dep.log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.jena</groupId>
+                <artifactId>jena-core</artifactId>
+                <version>${dep.jena-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.jena</groupId>
+                <artifactId>jena-tdb</artifactId>
+                <version>${dep.jena-tdb.version}</version>
             </dependency>
 
             <!-- test dependencies -->
