Added Neo4j Output - writer, driver, test
* export data to neo4j embedded database
* test for RDF dataset export to Neo4j added in RDFAnalysisDriverTest
* RDFReader minor refactoring

--- a/gradoop-core/pom.xml
+++ b/gradoop-core/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>hbase-server</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j</artifactId>
+        </dependency>
         <!-- Testing -->
 
         <!-- HBase -->
