--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <dep.log4j.version>1.2.17</dep.log4j.version>
         <dep.jena-core.version>2.11.0</dep.jena-core.version>
         <dep.jena-tdb.version>1.0.0</dep.jena-tdb.version>
-
+        <dep.neo4j.version>2.1.7</dep.neo4j.version>
 
         <plugin.maven-compiler.version>3.0</plugin.maven-compiler.version>
         <plugin.maven-checkstyle.version>2.13</plugin.maven-checkstyle.version>
@@ -220,6 +220,11 @@
                 <groupId>org.apache.jena</groupId>
                 <artifactId>jena-tdb</artifactId>
                 <version>${dep.jena-tdb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.neo4j</groupId>
+                <artifactId>neo4j</artifactId>
+                <version>${dep.neo4j.version}</version>
             </dependency>
 
             <!-- test dependencies -->
