--- a/pom.xml
+++ b/pom.xml
@@ -62,9 +62,9 @@
         <dep.junit.version>4.11</dep.junit.version>
         <dep.jsonassert.version>1.2.3</dep.jsonassert.version>
         <dep.log4j.version>1.2.17</dep.log4j.version>
-        <dep.jena-core.version>2.11.0</dep.jena-core.version>
-        <dep.jena-tdb.version>1.0.0</dep.jena-tdb.version>
         <dep.neo4j.version>2.1.7</dep.neo4j.version>
+        <dep.org.apache.httpcomponents.version>4.3.6
+        </dep.org.apache.httpcomponents.version>
 
         <plugin.maven-compiler.version>3.0</plugin.maven-compiler.version>
         <plugin.maven-checkstyle.version>2.13</plugin.maven-checkstyle.version>
@@ -163,6 +163,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${plugin.maven-surefire.version}</version>
+                    <configuration>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -212,19 +215,14 @@
                 <version>${dep.log4j.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.jena</groupId>
-                <artifactId>jena-core</artifactId>
-                <version>${dep.jena-core.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.jena</groupId>
-                <artifactId>jena-tdb</artifactId>
-                <version>${dep.jena-tdb.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.neo4j</groupId>
                 <artifactId>neo4j</artifactId>
                 <version>${dep.neo4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${dep.org.apache.httpcomponents.version}</version>
             </dependency>
 
             <!-- test dependencies -->
