Improved RDF Enrichment
* downgraded httpclient dependency -> compatibility with server lib 4.1.3
* added timeout (socket + connection) for queries
* custom getVertices to support small chunks of HBase results
* some cleanup (removed RDFInstanceEnrichment MapReduce class, minor)

--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -120,9 +120,11 @@
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
