--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>gradoop-examples</module>
         <module>gradoop-checkstyle</module>
         <module>gradoop-mapreduce</module>
+        <module>gradoop-flink</module>
     </modules>
 
     <developers>
@@ -57,11 +58,14 @@
         <project.build.targetJdk>1.7</project.build.targetJdk>
 
 
+        <dep.flink.version>0.9-SNAPSHOT</dep.flink.version>
         <dep.giraph.version>1.1.0-hadoop2</dep.giraph.version>
         <dep.hbase.version>0.98.11-hadoop2</dep.hbase.version>
         <dep.junit.version>4.11</dep.junit.version>
         <dep.jsonassert.version>1.2.3</dep.jsonassert.version>
         <dep.log4j.version>1.2.17</dep.log4j.version>
+        <dep.mockito.version>1.10.19</dep.mockito.version>
+
 
 
         <plugin.maven-compiler.version>3.0</plugin.maven-compiler.version>
@@ -188,6 +192,19 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <!-- Flink -->
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-java</artifactId>
+                <version>${dep.flink.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-gelly</artifactId>
+                <version>${dep.flink.version}</version>
+            </dependency>
+
             <!-- Giraph -->
             <dependency>
                 <groupId>org.apache.giraph</groupId>
@@ -259,6 +276,13 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${dep.junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${dep.mockito.version}</version>
                 <scope>test</scope>
             </dependency>
 
