--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <project.build.targetJdk>1.7</project.build.targetJdk>
 
 
-        <dep.flink.version>0.9-SNAPSHOT</dep.flink.version>
+        <dep.flink.version>0.9.0</dep.flink.version>
         <dep.giraph.version>1.1.0-hadoop2</dep.giraph.version>
         <dep.hbase.version>0.98.11-hadoop2</dep.hbase.version>
         <dep.junit.version>4.11</dep.junit.version>
@@ -196,6 +196,12 @@
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-java</artifactId>
+                <version>${dep.flink.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-clients</artifactId>
                 <version>${dep.flink.version}</version>
             </dependency>
 
