--- a/gradoop-flink/pom.xml
+++ b/gradoop-flink/pom.xml
@@ -121,6 +121,12 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.pragmatists</groupId>
+            <artifactId>JUnitParams</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
