--- a/gradoop-flink/pom.xml
+++ b/gradoop-flink/pom.xml
@@ -40,18 +40,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <systemProperties>
-                        <!-- Needed for unit testing with mapreduce cluster -->
-                        <property>
-                            <name>prop.jarLocation</name>
-                            <value>
-                                ${top.dir}/gradoop-core/target/gradoop-core-${project.version}-jar-with-dependencies.jar
-                            </value>
-                        </property>
-                    </systemProperties>
-                </configuration>
             </plugin>
             <!-- Creates an extra *-tests.jar which can be used as dependency -->
             <plugin>
@@ -118,16 +106,18 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Flink -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-test-utils</artifactId>
+            <version>${dep.flink.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Others -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>pl.pragmatists</groupId>
-            <artifactId>JUnitParams</artifactId>
             <scope>test</scope>
         </dependency>
 
