added ascii graph loader and documentation, #102

--- a/gradoop-core/pom.xml
+++ b/gradoop-core/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>hbase-server</artifactId>
         </dependency>
 
+        <!-- Others -->
+        <dependency>
+            <groupId>org.s1ck</groupId>
+            <artifactId>gdl</artifactId>
+        </dependency>
+
         <!-- Testing -->
 
         <!-- HBase -->
