Properties added to pojo model, #102

--- a/gradoop-core/pom.xml
+++ b/gradoop-core/pom.xml
@@ -96,5 +96,10 @@
             <artifactId>jsonassert</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 </project>
