--- a/gradoop-core/pom.xml
+++ b/gradoop-core/pom.xml
@@ -62,6 +62,12 @@
 
         <!-- Others -->
         <dependency>
+            <groupId>org.apache.pig</groupId>
+            <artifactId>pig</artifactId>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.s1ck</groupId>
             <artifactId>gdl</artifactId>
         </dependency>
