updated README, switched to 0.1, #102

--- a/gradoop-core/pom.xml
+++ b/gradoop-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>gradoop</artifactId>
         <groupId>de.uni-leipzig.de.dbs</groupId>
-        <version>0.0.3-SNAPSHOT</version>
+        <version>0.1</version>
     </parent>
 
     <artifactId>gradoop-core</artifactId>
