--- a/gradoop-algorithms/pom.xml
+++ b/gradoop-algorithms/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>gradoop</artifactId>
         <groupId>de.uni-leipzig.de.dbs</groupId>
-        <version>0.0.3-SNAPSHOT</version>
+        <version>0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
