switched to 0.2-SNAPSHOT

--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>gradoop</artifactId>
         <groupId>de.uni-leipzig.de.dbs</groupId>
-        <version>0.1</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>gradoop-examples</artifactId>
