--- a/gradoop-checkstyle/pom.xml
+++ b/gradoop-checkstyle/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>gradoop</artifactId>
         <groupId>de.uni-leipzig.de.dbs</groupId>
-        <version>0.1</version>
+        <version>0.2-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
