--- a/gradoop-core/pom.xml
+++ b/gradoop-core/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>hbase-server</artifactId>
         </dependency>
 
+        <!-- Flink -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-java</artifactId>
+        </dependency>
+
         <!-- Others -->
         <dependency>
             <groupId>org.s1ck</groupId>
