added social network example
* removed scope provided from hbase dependency
* added maven-shade as plugin (used in examples)

--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -34,6 +34,28 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <!-- libs that are not provided by flink -->
+                                    <include>org.apache.hbase:hbase-common</include>
+                                    <include>org.gradoop:*</include>
+                                    <include>org.s1ck:gdl</include>
+                                </includes>
+                            </artifactSet>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
