added extended social network example
* fixed bug in GradoopId NormalizableKey implementation
* added property getter function
* added jettison dependency (1.3.7)

--- a/gradoop-core/pom.xml
+++ b/gradoop-core/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>gdl</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+        </dependency>
+
         <!-- Test dependencies -->
 
         <!-- HBase -->
