ITBDA example, fixes #152, fixes #153
* Aggregate functions result into property value

--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -74,6 +74,25 @@
             <artifactId>gradoop-flink</artifactId>
         </dependency>
 
+        <!-- Flink -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-java</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-clients</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Test dependencies -->
 
         <!-- Gradoop -->
