--- a/gradoop-algorithms/pom.xml
+++ b/gradoop-algorithms/pom.xml
@@ -53,6 +53,13 @@
         <!-- Gradoop -->
         <dependency>
             <groupId>org.gradoop</groupId>
+            <artifactId>gradoop-core</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.gradoop</groupId>
             <artifactId>gradoop-flink</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
