--- a/gradoop-algorithms/pom.xml
+++ b/gradoop-algorithms/pom.xml
@@ -68,7 +68,7 @@
         <!-- Flink -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-test-utils</artifactId>
+            <artifactId>flink-test-utils_2.10</artifactId>
             <scope>test</scope>
         </dependency>
 
