--- a/gradoop-flink/pom.xml
+++ b/gradoop-flink/pom.xml
@@ -66,12 +66,12 @@
 
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-gelly</artifactId>
+            <artifactId>flink-gelly_2.10</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-hbase</artifactId>
+            <artifactId>flink-hbase_2.10</artifactId>
         </dependency>
 
         <!-- Test dependencies -->
@@ -102,7 +102,7 @@
         <!-- Flink -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-test-utils</artifactId>
+            <artifactId>flink-test-utils_2.10</artifactId>
             <scope>test</scope>
         </dependency>
 
