--- a/pom.xml
+++ b/pom.xml
@@ -245,20 +245,20 @@
 
             <dependency>
                 <groupId>org.apache.flink</groupId>
-                <artifactId>flink-clients</artifactId>
+                <artifactId>flink-clients_2.10</artifactId>
                 <version>${dep.flink.version}</version>
                 <scope>provided</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.flink</groupId>
-                <artifactId>flink-gelly</artifactId>
+                <artifactId>flink-gelly_2.10</artifactId>
                 <version>${dep.flink.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.flink</groupId>
-                <artifactId>flink-hbase</artifactId>
+                <artifactId>flink-hbase_2.10</artifactId>
                 <version>${dep.flink.version}</version>
             </dependency>
 
@@ -311,7 +311,7 @@
             <!-- Flink -->
             <dependency>
                 <groupId>org.apache.flink</groupId>
-                <artifactId>flink-test-utils</artifactId>
+                <artifactId>flink-test-utils_2.10</artifactId>
                 <version>${dep.flink.version}</version>
                 <scope>test</scope>
             </dependency>
