--- a/gradoop-flink/src/test/resources/log4j-test.properties
+++ b/gradoop-flink/src/test/resources/log4j-test.properties
@@ -2,8 +2,10 @@
 # set manually to INFO for debugging purposes
 log4j.rootLogger=OFF, testlogger
 
+log4j.category.org.gradoop=DEBUG
+
 # A1 is set to be a ConsoleAppender.
 log4j.appender.testlogger=org.apache.log4j.ConsoleAppender
-log4j.appender.testlogger.target=System.err
+log4j.appender.testlogger.target=System.out
 log4j.appender.testlogger.layout=org.apache.log4j.PatternLayout
-log4j.appender.testlogger.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.testlogger.layout.ConversionPattern=%d{HH:mm:ss,SSS} [%t] %-5p %c{1} %x - %m%n
