updated Simulation Runner, #171
* disabled logging for gradoop-examples
* added AbstractRunner for reading/writing graphs

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,7 @@
                     <configuration>
                         <configLocation>gradoop/checkstyle.xml</configLocation>
                         <headerLocation>gradoop/LICENSE.txt</headerLocation>
+                        <includeResources>false</includeResources>
                     </configuration>
                     <executions>
                         <execution>
