--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -52,6 +52,8 @@
                                     <include>org.gradoop:*</include>
                                     <include>org.s1ck:gdl</include>
                                     <include>org.codehaus.jettison:jettison</include>
+                                    <include>com.google.guava:guava</include>
+                                    <include>org.antlr:antlr4-runtime</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
