added module gradoop-benchmark (#234) *moved GroupingBenchmark to module gradoop-benchmark *minor changes in grouping.conf and grouping.sh (#235),(#236)

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>gradoop-core</module>
         <module>gradoop-checkstyle</module>
         <module>gradoop-datagen</module>
+        <module>gradoop-benchmark</module>
     </modules>
 
     <developers>
@@ -243,6 +244,12 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.gradoop</groupId>
+                <artifactId>gradoop-examples</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <!-- Flink -->
             <dependency>
                 <groupId>org.apache.flink</groupId>
@@ -319,6 +326,14 @@
             <dependency>
                 <groupId>org.gradoop</groupId>
                 <artifactId>gradoop-datagen</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.gradoop</groupId>
+                <artifactId>gradoop-examples</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
                 <scope>test</scope>
