--- a/dev-support/benchmark/grouping/grouping.conf
+++ b/dev-support/benchmark/grouping/grouping.conf
@@ -2,8 +2,11 @@
 #Configuration file for GroupingBenchmark
 #################################################
 
-#Flink root directory
-prefix:/usr/local/flink-1.0.0/bin/flink
+#Flink execution binary
+flink:/usr/local/flink-1.0.0/bin/flink
+
+#HDFS execution binary
+hdfs:/usr/local/hadoop-2.5.2/bin/hadoop
 
 #Benchmarking class
 class:org.gradoop.examples.GroupingBenchmark
@@ -11,20 +14,20 @@ class:org.gradoop.examples.GroupingBenchmark
 #Used jar
 jar:gradoop-examples.jar
 
-#Parallelism parameter (can be a list e.g. 8, 16, 32, 64, 128)
+#Parallelism parameter (can be a list e.g. 8,16,32,64,128)
 parallelism: 16
 
 #How many repeats
 rounds: 3
 
-#Input path (can be a list e.g. /user/hduser/input/input1, /user/hduser/input2)
+#Input path (can be a list e.g. /user/hduser/input/input1,/user/hduser/input2)
 input: /user/hduser/input/1_json_merged/
 
 #Output path (will be deleted after every round)
 output: /user/hduser/output
 
 #Output path for csv statistics file
-csv: /home/hduser/csv/grouping_csv
+csv: /home/hduser/csv/grouping.csv
 
 #Vertex grouping keys
 vgk: city,age,university
@@ -33,13 +36,13 @@ vgk: city,age,university
 egk: since
 
 #Vertex aggregation functions (list of max, min, count OR none)
-vagg: max, max
+vagg: max,max
 
 #Vertex aggregation keys (must be same number of entries like vagg)
-vak: income, age
+vak: income,age
 
 #Vertex aggregation result keys (must be same number of entries like vagg)
-vark: max(income), max(age)
+vark: max(income),max(age)
 
 #Edge aggregation functions (list of max, min, count OR none)
 eagg: none
