minor changes in grouping.conf and grouping.sh (#234)

--- a/dev-support/benchmark/grouping/grouping.conf
+++ b/dev-support/benchmark/grouping/grouping.conf
@@ -3,10 +3,10 @@
 #################################################
 
 #Flink execution binary
-flink:/usr/local/flink-1.0.0/bin/flink
+flink_root:/usr/local/flink-1.0.0
 
 #HDFS execution binary
-hdfs:/usr/local/hadoop-2.5.2/bin/hadoop
+hdfs_root:/usr/local/hadoop-2.5.2
 
 #Benchmarking class
 class:org.gradoop.examples.GroupingBenchmark
