added fsm scripts (#187)

--- a/dev-support/benchmark/fsm/fsm.conf
+++ b/dev-support/benchmark/fsm/fsm.conf
@@ -3,7 +3,10 @@
 #################################################
 
 #Flink root directory
-prefix:/usr/local/flink-1.0.0/bin/flink
+flink_root:/usr/local/flink-1.0.0
+
+#HDFS root directory
+hdfs_root:/usr/local/hadoop-2.5.2
 
 #Benmarking class
 class:org.gradoop.examples.benchmark.TransactionalFSM.TransactionalFSMBenchmark
@@ -21,7 +24,7 @@ rounds: 3
 input: /user/hduser/input/datagen/
 
 #Output path for csv statistics file
-csv: /home/hduser/csv/fsm_csv
+csv: /home/hduser/csv/fsm.csv
 
 #Minimum supported parameter for benchmark class
 ms: 0.2
