--- a/dev-support/benchmark/grouping/grouping.conf
+++ b/dev-support/benchmark/grouping/grouping.conf
@@ -20,10 +20,11 @@ parallelism: 16
 #How many repeats
 rounds: 3
 
-#Input path (can be a list e.g. /user/hduser/input/input1,/user/hduser/input2)
+#Input hdfs path (can be a list e.g.
+# /user/hduser/input/input1,/user/hduser/input2)
 input: /user/hduser/input/1_json_merged/
 
-#Output path (will be deleted after every round)
+#Output hdfs path (will be deleted before every round)
 output: /user/hduser/output
 
 #Output path for csv statistics file
