minur changes in fsm.conf and TransactionalFSMBenchmark(#187)

--- a/dev-support/benchmark/fsm/fsm.conf
+++ b/dev-support/benchmark/fsm/fsm.conf
@@ -14,13 +14,14 @@ class:org.gradoop.examples.benchmark.TransactionalFSM.TransactionalFSMBenchmark
 #Used jar
 jar:gradoop-examples.jar
 
-#Parallelism parameter (can be a list e.g. 8, 16, 32, 64, 128)
+#Parallelism parameter (can be a list e.g. 8,16,32,64,128)
 parallelism: 16
 
 #How many repeats
 rounds: 3
 
-#Input path (can be a list e.g. /user/hduser/input/input1, /user/hduser/input2)
+#Input hdfs path
+#(can be a list e.g. /user/hduser/input/input1,/user/hduser/input2)
 input: /user/hduser/input/datagen/
 
 #Output path for csv statistics file
