data duplicator and benchmark refactoring

--- a/dev-support/benchmark/fsm/fsm.conf
+++ b/dev-support/benchmark/fsm/fsm.conf
@@ -12,7 +12,7 @@ hdfs_root:/usr/local/hadoop-2.5.2
 class:org.gradoop.examples.benchmark.TransactionalFSM.TransactionalFSMBenchmark
 
 #Used jar
-jar:gradoop-examples.jar
+jar:gradoop-benchmark-0.2-SNAPSHOT.jar
 
 #Parallelism parameter (can be a list e.g. 8,16,32,64,128)
 parallelism: 16
@@ -25,15 +25,15 @@ rounds: 3
 input: /user/hduser/input/datagen/
 
 #Output path for csv statistics file
-csv: /home/hduser/csv/fsm.csv
+log: /home/hduser/csv/fsm.csv
 
-#Minimum supported parameter for benchmark class
-ms: 0.2
+#FSM threshold
+t: 0.2
 
-#Synthetic flag if used input dataset is a synthetic one
-syn:
+#Flag if input dataset contains directed graphs
+d:
 
 #Bulk iteration flag if fsm-bulk-iteration implementation should be used
-bulk:
+impl: it
 
 
