--- a/dev-support/benchmark/fsm/fsm.conf
+++ b/dev-support/benchmark/fsm/fsm.conf
@@ -9,7 +9,7 @@ flink_root:/usr/local/flink-1.0.0
 hdfs_root:/usr/local/hadoop-2.5.2
 
 #Benmarking class
-class:org.gradoop.examples.benchmark.TransactionalFSM.TransactionalFSMBenchmark
+class:org.gradoop.benchmark.fsm.TransactionalFSMBenchmark
 
 #Used jar
 jar:gradoop-benchmark-0.2-SNAPSHOT.jar
@@ -18,17 +18,17 @@ jar:gradoop-benchmark-0.2-SNAPSHOT.jar
 parallelism: 16
 
 #How many repeats
-rounds: 3
+rounds: 1
 
 #Input hdfs path
 #(can be a list e.g. /user/hduser/input/input1,/user/hduser/input2)
-input: /user/hduser/input/datagen/
+input: /user/hduser/input/datagen/1000_1_multigraph.tlf
 
 #Output path for csv statistics file
 log: /home/hduser/csv/fsm.csv
 
 #FSM threshold
-t: 0.2
+t: 0.8
 
 #Flag if input dataset contains directed graphs
 d:
