--- a/dev-support/benchmark/fsm/fsm.conf
+++ b/dev-support/benchmark/fsm/fsm.conf
@@ -9,31 +9,31 @@ flink_root:/usr/local/flink-1.0.0
 hdfs_root:/usr/local/hadoop-2.5.2
 
 #Benmarking class
-class:org.gradoop.examples.benchmark.TransactionalFSM.TransactionalFSMBenchmark
+class:org.gradoop.benchmark.fsm.TransactionalFSMBenchmark
 
 #Used jar
-jar:gradoop-examples.jar
+jar:gradoop-benchmark-0.2-SNAPSHOT.jar
 
 #Parallelism parameter (can be a list e.g. 8,16,32,64,128)
 parallelism: 16
 
 #How many repeats
-rounds: 3
+rounds: 1
 
 #Input hdfs path
 #(can be a list e.g. /user/hduser/input/input1,/user/hduser/input2)
-input: /user/hduser/input/datagen/
+input: /user/hduser/input/datagen/1000_1_multigraph.tlf
 
 #Output path for csv statistics file
-csv: /home/hduser/csv/fsm.csv
+log: /home/hduser/csv/fsm.csv
 
-#Minimum supported parameter for benchmark class
-ms: 0.2
+#FSM threshold
+t: 0.8
 
-#Synthetic flag if used input dataset is a synthetic one
-syn:
+#Flag if input dataset contains directed graphs
+d:
 
 #Bulk iteration flag if fsm-bulk-iteration implementation should be used
-bulk:
+impl: it
 
 
