#249, predictable generation and benchmark work.

--- a/dev-support/benchmark/fsm/series/graphcount_yeast.conf
+++ b/dev-support/benchmark/fsm/series/graphcount_yeast.conf
@@ -10,8 +10,7 @@ t: 0.5
 
 #Input hdfs path
 #(can be a list e.g. /user/hduser/input/input1,/user/hduser/input2)
-input: /user/hduser/input/tlf/yeast.tlf, /user/hduser/input/tlf/yeast_10.tlf,
-/user/hduser/input/tlf/yeast_100.tlf
+input: /user/hduser/input/yeast_1.tlf,/user/hduser/input/yeast_10.tlf
 
 #Flag if input dataset contains directed graphs
 #d:
