--- a/dev-support/benchmark/fsm/series/graphsize_predictable.conf
+++ b/dev-support/benchmark/fsm/series/graphsize_predictable.conf
@@ -10,11 +10,7 @@ t: 0.8
 
 #Input hdfs path
 #(can be a list e.g. /user/hduser/input/input1,/user/hduser/input2)
-input: /user/hduser/input/tlf/predictable_1000_1.tlf,
-/user/hduser/input/tlf/predictable_1000_2.tlf,
-/user/hduser/input/tlf/predictable_1000_3.tlf,
-/user/hduser/input/tlf/predictable_1000_4.tlf,
-/user/hduser/input/tlf/predictable_1000_5.tlf
+input: /user/hduser/input/predictable_1000_2.tlf,/user/hduser/input/predictable_1000_3.tlf
 
 #Flag if input dataset contains directed graphs
 d:
