add EdgeList example for I/O, fixes #260
* overloaded constructors for ImportEdge/-Vertex
* renamed fields in ImportEdge (sourceVertexId -> sourceId)

--- a/gradoop-datagen/pom.xml
+++ b/gradoop-datagen/pom.xml
@@ -15,8 +15,7 @@
     <packaging>jar</packaging>
 
     <name>Gradoop Datagen</name>
-    <description>Gradoop Data Generators.
-    </description>
+    <description>Gradoop Data Generators.</description>
 
     <build>
         <plugins>
