--- a/gradoop-datagen/pom.xml
+++ b/gradoop-datagen/pom.xml
@@ -52,7 +52,7 @@
         <!-- Gradoop -->
         <dependency>
             <groupId>org.gradoop</groupId>
-            <artifactId>gradoop-core</artifactId>
+            <artifactId>gradoop-common</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
