Some test parser.

--- a/gradoop-flink/pom.xml
+++ b/gradoop-flink/pom.xml
@@ -50,6 +50,14 @@
     <dependencies>
         <!-- Compile dependencies -->
 
+        <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.2.6</version>
+        </dependency>
+
+
         <!-- Gradoop -->
         <dependency>
             <groupId>org.gradoop</groupId>
