--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
         <dep.jettison.version>1.3.7</dep.jettison.version>
         <dep.jsonassert.version>1.2.3</dep.jsonassert.version>
         <dep.log4j.version>1.2.17</dep.log4j.version>
+        <dep.mongodb.version>3.3.0</dep.mongodb.version>
 
         <log4j.properties>log4j-test.properties</log4j.properties>
 
@@ -306,6 +307,12 @@
                 <artifactId>log4j</artifactId>
                 <version>${dep.log4j.version}</version>
                 <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongo-java-driver</artifactId>
+                <version>${dep.mongodb.version}</version>
             </dependency>
 
             <!-- Test dependencies -->
