added distributed cache to core

--- a/gradoop-common/pom.xml
+++ b/gradoop-common/pom.xml
@@ -71,6 +71,16 @@
             <artifactId>jettison</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast-client</artifactId>
+        </dependency>
+
         <!-- Test dependencies -->
 
         <!-- HBase -->
