--- a/dev-support/benchmark/fsm/series/graphcount_yeast.conf
+++ b/dev-support/benchmark/fsm/series/graphcount_yeast.conf
@@ -10,7 +10,7 @@ t: 0.5
 
 #Input hdfs path
 #(can be a list e.g. /user/hduser/input/input1,/user/hduser/input2)
-input: /user/hduser/input/yeast_1.tlf,/user/hduser/input/yeast_10.tlf
+input: /user/hduser/input/yeast_1.tlf,/user/hduser/input/yeast_3.tlf,/user/hduser/input/yeast_10.tlf
 
 #Flag if input dataset contains directed graphs
 #d:
