--- a/dev-support/benchmark/fsm/fsm_common.conf
+++ b/dev-support/benchmark/fsm/fsm_common.conf
@@ -3,16 +3,16 @@
 ################################################################################
 
 #Flink root directory
-flink_root:/usr/local/flink-1.0.0
+flink_root:/usr/local/flink-1.0.3
 
 #HDFS root directory
 hdfs_root:/usr/local/hadoop-2.5.2
 
 #Benmarking class
-class:TransactionalFSMBenchmark
+class:org.gradoop.benchmark.fsm.TransactionalFSMBenchmark
 
 #Used jar
-jar:gradoop-benchmark-0.2-SNAPSHOT.jar
+jar:gradoop-examples-0.2-SNAPSHOT.jar
 
 #Output path for csv statistics file
 log: /home/hduser/csv/fsm.csv
@@ -21,5 +21,5 @@ log: /home/hduser/csv/fsm.csv
 rounds: 1
 
 #Bulk iteration flag if fsm-bulk-iteration implementation should be used
-impl: it,fr
+impl: it
 
