--- a/dev-support/benchmark/fsm/fsm_common.conf
+++ b/dev-support/benchmark/fsm/fsm_common.conf
@@ -21,5 +21,4 @@ log: /home/hduser/csv/fsm.csv
 rounds: 1
 
 #Bulk iteration flag if fsm-bulk-iteration implementation should be used
-impl: it
-
+impl: bulk, unroll
