--- a/dev-support/benchmark/fsm/fsm_common.conf
+++ b/dev-support/benchmark/fsm/fsm_common.conf
@@ -20,5 +20,5 @@ log: /home/hduser/csv/fsm.csv
 #How many repeatsq
 rounds: 1
 
-#Bulk iteration flag if fsm-bulk-iteration implementation should be used
+#Bulk iteration flag if fsm-bulk-iteration iterationStrategy should be used
 impl: bulk, unroll
